force-app/main/default/objects/Account/fields/Contact_Point_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>