force-app/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <description>DONT</description>
    <formula>AND( Do_Not_Call__c ,  Do_Not_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>