force-app/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>