force-app/main/default/objects/Account/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>