force-app/main/default/objects/Account/fields/SubmittedUser__c.field-meta.xml
<CustomField>
    <fullName>SubmittedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>