force-app/main/default/objects/Account/recordTypes/Secondary.recordType-meta.xml
<RecordType>
    <fullName>Secondary</fullName>
    <active>false</active>
    <label>Secondary</label>
</RecordType>