force-app/main/default/objects/Account/validationRules/NoUnderScore.validationRule-meta.xml
<ValidationRule>
    <fullName>NoUnderScore</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Active__c , &apos;jj&apos;)</errorConditionFormula>
    <errorMessage>picklist</errorMessage>
</ValidationRule>